# ngsi-ld-converters

./: .gitignore  Questions.md  README.md
contexts/: dataModel.DCAT-AP.jsonld  dataModel.STAT-DCAT-AP.jsonld
converter/: pom.xml
converter/src/site/: site.xml
converter_python/: Cli.py  JsonLdSerializer.py  JsonLdTransformer.py  convert_rules.py  convert_shacl_json.py  pyproject.toml  requirements.txt  sparql_custom.py
converter_python/log/: log.txt
converter_python/test-small/: framing-context.jsonld  input.rdf  input.ttl
examples/structure-accounts/: structures-accounts-pretty.ttl  structures-accounts.ttl
examples/structure-accounts/output/: AttributeProperty_a3003.jsonld  AttributeProperty_a3004.jsonld  AttributeProperty_a3005.jsonld  AttributeProperty_a3006.jsonld  AttributeProperty_a3007.jsonld  AttributeProperty_a3010.jsonld  AttributeProperty_a3012.jsonld  AttributeProperty_a3014.jsonld  AttributeProperty_a3016.jsonld  AttributeProperty_a3018.jsonld  AttributeProperty_a3019.jsonld  AttributeProperty_a3020.jsonld  CatalogueDCAT-AP_2fdd66ae5a072b1fc3fd22a481cf3027.jsonld  ConceptSchema_ajustementsSaisonnier.jsonld  Concept_AjustementSaisonnier.jsonld  Concept_C.jsonld  Concept_I.jsonld  Concept_K.jsonld  Concept_M.jsonld  Concept_N.jsonld  Concept_R.jsonld  Concept_S.jsonld  (+18 more)
examples/structure-tourism/: structures-tourism-pretty.ttl  structures-tourism.ttl
examples/structure-tourism-minimal/: structures-tourism-minimal-pretty.ttl
rules/: datacube-2-statdcatap.ttl  framing-context.jsonld  structures-tourism-minimal-pretty-datacube-2-statdcatap-2023-01-20.jsonld  structures-tourism-minimal-pretty-datacube-2-statdcatap-2023-01-20.ttl
rules/datacube-2-statdcatap/: datacube-2-statdcatap.ttl
(+39 files in other folders)
